Write down what the three legs answered
Loom does not pin, cross-thread resumption holds on the JVM and has no
native spelling, and the ctl-live debt in 11.10 is closed. Four negative
controls, one of them a rejected candidate that turned out to prove
something else: a monitor held on the driving frame is refused by our own
onPinned whenever a yield bubbles past an inner activation.

The corpus count in the README was stale by 29 entries.